effects/kwinquickeffect: ensure view map doesn't contain a nullptr view

BUG: 462014